--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
   http: ^0.12.2
+  bloc: ^6.1.0
+  flutter_bloc: ^6.1.0
 
 dev_dependencies:
   flutter_test:
